# chatgpt-feedback

./: .env.example  .flake8  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/application/use_cases/: __init__.py
app/application/use_cases/authenticate_user/: authenticate_user.py  request.py
app/application/use_cases/generate_feedback/: generate_feedback.py
app/application/use_cases/get_user/: get_user_case.py
app/application/use_cases/register_user/: register_user_case.py  request.py
app/config/: enviroment.py
app/domain/exceptions/: invalid_password_error.py  user_already_exist_error.py  user_registration_error.py
app/domain/models/: __init__.py  action_item.py  ai_response.py  feedback.py  peer.py  person.py  user.py
app/domain/repositories/: __init__.py  ai_repository.py  feedback_repository.py  user_repository.py
app/infraestructure/api/: main.py
app/infraestructure/api/config/: auth.py  auth_model.py
app/infraestructure/api/exceptions/: http_exceptions.py
app/infraestructure/database/: user_repository_db.py
app/infraestructure/database/config/: dynamodb.py
app/tests/: conftest.py
app/tests/fixtures/: dynamodb_session.py  insert_user_db.py
app/tests/integration/infraestructure/: main_test.py
app/tests/integration/infraestructure/api/: login_test.py  signup_test.py
app/tests/unit/application/use_cases/: authenticate_user_test.py  generate_feedback_test.py  get_user_case_test.py  (+1 more)
chatgpt-app/: package-lock.json  package.json
(+2 files in other folders)
