[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Abigail <abigail.cabascango@ioet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pytest = "^8.2.2"
pydantic = "^2.7.3"
mypy = "^1.10.0"
uvicorn = "^0.30.1"
flake8 = "^7.0.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
